--- a/vignettes/Model_TTU.Rmd
+++ b/vignettes/Model_TTU.Rmd
@@ -123,18 +123,16 @@ Our first analytic task is to test which models, predictors and covariates perfo
 We begin by reviewing the `TTU` packages lookup table of types of models we can test.
 
 ```{r}
-data("mdl_types_lup",package = "TTU") 
+mdl_types_lup <- TTU::get_cndts_for_mxd_mdls()
 mdl_types_lup %>%
     ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Model types lookup table")
 ```
 
-We modify this table as appropriate (in the below example, we adjust the start values for two of the models, as the default values are not appropriate for our data). We then add the lookup table to a new object, `mdl_smry_ls` which stores information about the candidate models we will be using. 
+We modify this table as appropriate (in the below example, we leave it unchanged). We then add the lookup table to a new object, `mdl_smry_ls` which stores information about the candidate models we will be using. 
 
 ```{r}
-mdl_smry_ls <- TTU::mdl_types_lup %>%
-  dplyr::mutate(start_chr = dplyr::case_when(short_name_chr %in% c("GLM_BNL_LGT","GLM_BNL_CLL") ~ c("0.5, -0.05"),
-                                             T ~ start_chr)) %>%
+mdl_smry_ls <- mdl_types_lup %>%
   make_mdl_smry_ls()
 ```
 
@@ -163,7 +161,7 @@ cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr
 We can override these automated selections and instead incorporate other considerations (possibly based on judgments informed by visual inspection of the plots and the desirability of constraining predictions to a maximum value of one). We do this in the following command, specifying new preferred model types, in descending order of preference.
 
 ```{r}
-cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr <- c("OLS_LOG", "GLM_GSN_LOG", "BET_CLL")
+cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr <- c("OLS_LOG", "GLM_GSN_LOG", "BET_LOG")
 ```
 
 ### Use most preferred model to compare all candidate predictors
