--- a/vignettes/Model_TTU.Rmd
+++ b/vignettes/Model_TTU.Rmd
@@ -161,7 +161,7 @@ cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr
 We can override these automated selections and instead incorporate other considerations (possibly based on judgments informed by visual inspection of the plots and the desirability of constraining predictions to a maximum value of one). We do this in the following command, specifying new preferred model types, in descending order of preference.
 
 ```{r}
-cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr <- c("OLS_LOG", "GLM_GSN_LOG", "BET_LOG")
+cmprsns_ls$mdl_smry_ls$prefd_mdl_types_chr <- c("OLS_LOGLOG", "GLM_GSN_LOG", "BET_CLL")
 ```
 
 ### Use most preferred model to compare all candidate predictors
@@ -239,6 +239,7 @@ Note, that in many cases both the `prior_ls` and `control_ls` arguments can be s
 ```{r eval = F}
 outp_smry_ls <- write_ts_mdls_from_alg_outp(outp_smry_ls,
                                             predictors_lup = predictors_lup ,
+                                            utl_min_val_1L_dbl = 0.03,
                                             backend_1L_chr = "cmdstanr",
                                             new_dir_nm_1L_chr = "F_TS_Mdls",
                                             iters_1L_int = 4000L,
