--- a/inst/Markdown/_Write_TS_Mdls.Rmd
+++ b/inst/Markdown/_Write_TS_Mdls.Rmd
@@ -9,11 +9,11 @@ Test time series models for each of the `r length(outp_smry_ls$mdl_nms_ls %>% pu
 
 ```{r results='hide', message=FALSE, warning=FALSE}
 outp_smry_ls <- TTU::write_ts_mdls_from_alg_outp(outp_smry_ls,
-                                            fn_ls = list(TTU::fit_gsn_log_lnk,TTU::fit_clg_log_tfmn),
-                                            predictors_lup = params_ls$predictors_lup,
-                                            backend_1L_chr = "cmdstanr",
-                                            new_dir_nm_1L_chr = "F_TS_Mdls",
-                                            iters_1L_int = params_ls$iters_1L_int, 
-                                            prior_ls = params_ls$prior_ls, 
-                                            control_ls = params_ls$control_ls)
+                                                 utl_min_val_1L_dbl = params_ls$maui_params_ls$utl_min_val_1L_dbl,
+                                                 predictors_lup = params_ls$predictors_lup,
+                                                 backend_1L_chr = "cmdstanr",
+                                                 new_dir_nm_1L_chr = "F_TS_Mdls",
+                                                 iters_1L_int = params_ls$iters_1L_int, 
+                                                 prior_ls = params_ls$prior_ls, 
+                                                 control_ls = params_ls$control_ls)
 ```
