added min utl val param to rmds

--- a/data-raw/inst/Markdown/Analyse.Rmd
+++ b/data-raw/inst/Markdown/Analyse.Rmd
@@ -71,6 +71,7 @@ params:
   subtitle_1L_chr: "Main analysis algorithm for Transfer to Utility study"
   use_fake_data_1L_lgl: FALSE
   utl_class_fn_1L_chr: !r NULL
+  utl_min_val_1L_dbl: !r -1
 subtitle: "`r params$subtitle_1L_chr`"
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
 ---
