--- a/data-raw/inst/Markdown/Supplement.Rmd
+++ b/data-raw/inst/Markdown/Supplement.Rmd
@@ -69,6 +69,7 @@ params:
   subtitle_1L_chr: "Secondary analysis algorithm for Transfer to Utility study"
   transform_paths_ls: !r NULL
   use_fake_data_1L_lgl: FALSE
+  utl_min_val_1L_dbl: !r -1
 subtitle: "`r params$subtitle_1L_chr`"
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
 ---
